--- a/infra/pipeline/buildspec.yml
+++ b/infra/pipeline/buildspec.yml
@@ -12,6 +12,7 @@ phases:
       - pip install -r requirements.txt
   build:
     commands:
+      - cd infra/pipeline
       - python main.py -b my-pulumi-state -k pulumi-secret-encryption -s dev
 artifacts: 
   files:
