--- a/environments/dev.yaml
+++ b/environments/dev.yaml
@@ -2,9 +2,10 @@
 infra:
   - secrets
   - vpc
-  - pipeline_s3
-  - pipeline_iam
-  - pipeline_webhook
+  - pipeline-s3
+  - pipeline-cloudtrail
+  - pipeline-iam
+  - pipeline-webhook
   - pipeline
 vpc:
   cidr: 10.2.0.0/16
