--- a/infra/pipeline-webhook/buildspec.yml
+++ b/infra/pipeline-webhook/buildspec.yml
@@ -13,6 +13,7 @@ phases:
   build:
     commands:
       - cd infra/pipeline-webhook
+      - pip install --target ./lambda yaml
       - python main.py -b my-pulumi-state -k pulumi-secret-encryption -s dev
 artifacts: 
   files:
