Set environment from variable

--- a/infra/pipeline-webhook/buildspec.yml
+++ b/infra/pipeline-webhook/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     commands:
       - cd infra/pipeline-webhook
       - pip install --target ./lambda pyyaml
-      - python main.py -b my-pulumi-state -k pulumi-secret-encryption -s dev
+      - python main.py -b my-pulumi-state -k pulumi-secret-encryption -s $environment
 artifacts: 
   files:
     - '**/*'
