--- a/infra/pipeline-cloudtrail/buildspec.yml
+++ b/infra/pipeline-cloudtrail/buildspec.yml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       - cd infra/pipeline-cloudtrail
-      - python main.py -b my-pulumi-state -k pulumi-secret-encryption -s dev
+      - python main.py -b my-pulumi-state -k pulumi-secret-encryption -s $environment
 artifacts: 
   files:
     - '**/*'
