--- a/infra/pipeline/buildspec_pr.yml
+++ b/infra/pipeline/buildspec_pr.yml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       - cd infra/pipeline
-      - python test.py -b my-pulumi-state -k pulumi-secret-encryption -s dev
+      - python test.py -b my-pulumi-state -k pulumi-secret-encryption -s dev $environment
 artifacts: 
   files:
     - '**/*'
