--- a/infra/secrets/buildspec_pr.yml
+++ b/infra/secrets/buildspec_pr.yml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       - cd infra/secrets
-      - python test.py -b my-pulumi-state -k pulumi-secret-encryption -s dev
+      - python test.py -b my-pulumi-state -k pulumi-secret-encryption -s $environment
 artifacts: 
   files:
     - '**/*'
