--- a/environments/dev.yaml
+++ b/environments/dev.yaml
@@ -7,6 +7,8 @@ infra:
   - pipeline-cloudtrail
   - pipeline-webhook
   - pipeline
+docker:
+  codebuild_image: mastermindg/pulumi-bootstrap
 vpc:
   cidr: 10.2.0.0/16
   subnets:
